# libyt

./: .clang-format  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  SECURITY.md  cmake-format.json
.bak/: yt_add_grid.cpp
.github/: Notes.md  Readme.md
.github/data/step0/: Dens_grid111.txt  Dens_grid113.txt  Dens_grid127.txt  Dens_grid129.txt  Dens_grid132.txt  Dens_grid17.txt  Dens_grid32.txt  Dens_grid33.txt  Dens_grid34.txt  Dens_grid35.txt  Dens_grid39.txt  Dens_grid41.txt  Dens_grid42.txt  Dens_grid44.txt  Dens_grid46.txt  Dens_grid47.txt  Dens_grid48.txt  Dens_grid51.txt  Dens_grid55.txt  Dens_grid57.txt  Dens_grid59.txt  Dens_grid64.txt  Dens_grid65.txt  Dens_grid66.txt  Dens_grid68.txt  Dens_grid69.txt  Dens_grid7.txt  Dens_grid71.txt  Dens_grid72.txt  Dens_grid73.txt  Dens_grid76.txt  Dens_grid78.txt  Dens_grid80.txt  Dens_grid84.txt  Dens_grid85.txt  Dens_grid86.txt  Dens_grid87.txt  Dens_grid89.txt  Dens_grid94.txt  Dens_grid96.txt  (+2 more)
.github/data/step1/: Dens_grid107.txt  Dens_grid111.txt  Dens_grid116.txt  Dens_grid118.txt  Dens_grid127.txt  Dens_grid13.txt  Dens_grid131.txt  Dens_grid16.txt  Dens_grid17.txt  Dens_grid31.txt  Dens_grid33.txt  Dens_grid34.txt  Dens_grid37.txt  Dens_grid39.txt  Dens_grid44.txt  Dens_grid46.txt  Dens_grid47.txt  Dens_grid48.txt  Dens_grid57.txt  Dens_grid59.txt  Dens_grid61.txt  Dens_grid62.txt  Dens_grid63.txt  Dens_grid64.txt  Dens_grid66.txt  Dens_grid67.txt  Dens_grid68.txt  Dens_grid69.txt  Dens_grid71.txt  Dens_grid72.txt  Dens_grid73.txt  Dens_grid74.txt  Dens_grid81.txt  Dens_grid84.txt  Dens_grid88.txt  Dens_grid89.txt  Dens_grid91.txt  Dens_grid93.txt  Dens_grid94.txt  (+3 more)
.github/tests/: CheckNumericalError.py  DataIOTest.py
.github/tools/: combine_valgrind_snapshot.py  conclude_memory_profile.py  generate_density_data.cpp  requirements.txt
.github/workflows/: build-test.yml  cmake-build-test.yml  example-test-run.yml  make-build-test.yml  memory-profile.yml  pages.yml  unit-test.yml
doc/: ActivateInteractiveMode.md  CommitYourSettings.md  DerivedField.md  Doxyfile  Example.md  FAQs.md  FaceCenteredField.md  FreeResource.md  Gemfile  HowItWorks.md  HowToInstall.md  Initialize.md  InlinePythonScript.md  InteractivePythonPrompt.md  PerformInlineAnalysis.md  README  README.md  SetCodeSpecificParameter.md  SetFieldsInformation.md  SetLocalGridsInformation.md  SetParticlesInformation.md  SetYTParameter.md  TODO  _config.yml  conf.py  example.md  how-it-works.md  how-to-install.md  index.md  quick-start.md  requirements.txt
doc/DebugAndTimeProfiling/: CheckingInputData.md  TimeProfiling.md  index.md
doc/InSituPythonAnalysis/: FAQs.md  InlinePythonScript.md  InteractivePythonPrompt.md  JupyterNotebook.md  Limitations.md  ReloadingScript.md  UsingYT.md  index.md  libytCommand.md  libytPythonModule.md
doc/api-doc/: index.md
doc/debug-and-profiling/: check-input-data.md  index.md  time-profiling.md
doc/how-to-install/: details.md  how-to-install.md
doc/in-situ-python-analysis/: faq.md  index.md  inline-python-script.md  interactive-python-prompt.md  libyt-defined-command.md  libyt-python-module.md  limitation.md  reloading-script.md  using-yt.md
doc/libyt-api/: data-type.md  index.md  run-python-function.md  yt_commit.md  yt_finalize.md  yt_free.md  yt_get_gridsptr.md  yt_get_particlesptr.md  yt_getgridinfo.md  yt_initialize.md  yt_run_interactivemode.md  yt_run_jupyterkernel.md  yt_run_reloadscript.md  yt_set_parameters.md  yt_set_userparameter.md
doc/libytAPI/: ActivateInteractiveMode.md  ActivateJupyterKernel.md  ActivateReloadingScript.md  CommitYourSettings.md  DataType.md  DerivedField.md  Finalize.md  FreeResource.md  Initialize.md  LookUpPassedInData.md  PerformInlineAnalysis.md  SetCodeSpecificParameter.md  SetFieldsInformation.md  SetLocalGridsInformation.md  SetParticlesInformation.md  SetYTParameter.md  index.md
example/: CMakeLists.txt  Makefile  clean.sh  compile.sh  example.cpp  inline_script.py  make_movie.sh  set_ld_path.sh  test.cpp
example/amr-example/: CMakeLists.txt  Makefile  example.cpp  inline_script.py  make_movie.sh
example/quick-start/: CMakeLists.txt  inline_script.py  quick-start.cpp
include/: LibytProcessControl.h  Timer.h  TimerControl.h  amr_grid.h  big_mpi.h  comm_mpi.h  comm_mpi_rma.h  data_hub_amr.h  data_structure_amr.h  define_command.h  dtype_utilities.h  func_status.h  func_status_list.h  function_info.h  libyt.h  libyt.h.in  libyt_interactive_mode.h  libyt_kernel.h  libyt_process_control.h  libyt_python_shell.h  libyt_utilities.h  libyt_worker.h  logging.h  magic_command.h  new_magic_command.h  numpy_controller.h  python_controller.h  timer.h  timer_control.h  yt.h  yt_combo.h  yt_global.h  yt_macro.h  yt_prototype.h  yt_rma.h  yt_rma_field.h  yt_rma_particle.h  yt_type.h  yt_type_array.h  yt_type_field.h  (+4 more)
share/: CMakeLists.txt
share/jupyter/kernels/libyt_kernel/: kernel.json
src/: CMakeLists.txt  LibytProcessControl.cpp  Makefile  Timer.cpp  TimerControl.cpp  add_dict.cpp  allocate_hierarchy.cpp  append_grid.cpp  auxiliary.cpp  big_mpi.cpp  check_data.cpp  check_grid.cpp  check_grids.cpp  check_hierarchy.cpp  comm_mpi.cpp  comm_mpi_rma.cpp  data_hub_amr.cpp  data_structure_amr.cpp  define_command.cpp  dtype_utilities.cpp  func_status.cpp  func_status_list.cpp  function_info.cpp  gather_hierarchy.cpp  get_dtype_property.cpp  get_npy_dtype.cpp  init.cpp  init_libyt_module.cpp  init_python.cpp  libyt.so.1  libyt_kernel.cpp  libyt_process_control.cpp  libyt_python_module.cpp  libyt_python_shell.cpp  libyt_worker.cpp  logging.cpp  magic_command.cpp  make_softlink.sh  new_magic_command.cpp  numpy_controller.cpp  (+35 more)
test/: CMakeLists.txt  test_comm_mpi.cpp  test_data_hub_amr.cpp  test_data_structure_amr.cpp  test_numpy_controller.cpp  test_python_shell.cpp  test_template.cpp
test/memory_profile/: CMakeLists.txt  memory_profile.cpp  test_memory_profile.py
test/unit_test/: CMakeLists.txt  test_comm_mpi.cpp  test_data_structure_amr.cpp  test_numpy_controller.cpp  test_python_shell.cpp
(+231 files in other folders)
